--- a/app/src/main/res/layout/iteam_memo.xml
+++ b/app/src/main/res/layout/iteam_memo.xml
@@ -3,15 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <RelativeLayout
+        android:id="@+id/relative1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="5dp">
+
         <LinearLayout
             android:id="@+id/memo_header"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center_vertical">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_avatar"
                 android:layout_width="50dp"
@@ -19,24 +23,26 @@
                 android:gravity="center_vertical|end"
                 app:civ_border_color="@color/test2"
                 app:civ_border_width="2dp" />
+
             <TextView
                 android:id="@+id/user_name"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:gravity="center_vertical|start"
+                android:layout_marginStart="5dp"
                 android:text="User Name"
                 android:textSize="20dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/create_time"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical|end"
-                android:layout_marginEnd="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="10dp"
                 android:text="create_time"
                 android:textSize="20dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -46,8 +52,98 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/memo_header"
             android:gravity="center_vertical|start"
-            android:text="User Name"
+            android:text="memo_title"
             android:textSize="20dp"
-            android:textStyle="normal"/>
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_below="@+id/memo_title"
+            android:scaleType="fitXY"
+            android:src="@drawable/sya" />
+
+        <TextView
+            android:id="@+id/line"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#686666" />
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/line"
+            android:gravity="center_vertical">
+
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/like"
+                android:scaleType="centerInside"/>
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:text="いいね！"
+                android:gravity="center_vertical|start"
+                android:textSize="20dp"/>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/comment"
+                android:scaleType="fitEnd"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="コメント"
+                android:textSize="20dp"
+                android:gravity="center_vertical|start"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_below="@id/linearLayout1">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/comment_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical|center"
+                app:civ_border_color="@color/test2"
+                app:civ_border_width="2dp" />
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="4"
+                android:background="@drawable/comment_background"
+                android:layout_marginStart="5dp"
+                android:textSize="20dp"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"/>
+            <ImageButton
+                android:id="@+id/comment_put"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/plane"
+                android:scaleType="fitCenter"/>
+
+
+
+        </LinearLayout>
+
+
     </RelativeLayout>
+
+
 </androidx.cardview.widget.CardView>
