--- a/app/src/main/res/layout/iteam_memo.xml
+++ b/app/src/main/res/layout/iteam_memo.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:id="@+id/relative1"
@@ -57,21 +58,28 @@
             android:layout_marginTop="10dp"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="normal" />
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+        <LinearLayout
+            android:id="@+id/child1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
             android:layout_below="@+id/memo_title"
-            android:scaleType="fitXY"
-            android:src="@drawable/sya" />
+            android:orientation="horizontal">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                tools:listitem="@layout/iteam_image"/>
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/line"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            android:layout_below="@+id/image"
+            android:layout_below="@+id/child1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#686666" />
@@ -82,12 +90,13 @@
             android:layout_below="@id/line"
             android:gravity="center_vertical">
 
-            <ImageButton
+            <ImageView
+                android:id="@+id/like"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="5dp"
+                android:adjustViewBounds="true"
                 android:src="@drawable/like"
-                android:scaleType="centerInside"/>
+                android:scaleType="fitCenter"/>
 
             <TextView
                 android:layout_width="300dp"
@@ -96,10 +105,13 @@
                 android:gravity="center_vertical|start"
                 android:textSize="20dp"/>
             <ImageView
+                android:id="@+id/show_hide"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:adjustViewBounds="true"
                 android:src="@drawable/comment"
-                android:scaleType="fitEnd"/>
+                android:scaleType="fitCenter"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -109,10 +121,12 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/input_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:layout_below="@id/linearLayout1">
+            android:layout_below="@id/linearLayout1"
+            android:visibility="visible">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/comment_avatar"
                 android:layout_width="40dp"
@@ -122,6 +136,7 @@
                 app:civ_border_color="@color/test2"
                 app:civ_border_width="2dp" />
             <EditText
+                android:id="@+id/editText1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="4"
@@ -137,10 +152,27 @@
                 android:layout_marginEnd="15dp"
                 android:src="@drawable/plane"
                 android:scaleType="fitCenter"/>
-
-
-
         </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/comment_show"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/input_comment">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                tools:listitem="@layout/iteam_comment"/>
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_below="@+id/comment_show"
+            android:background="@color/test1"/>
 
 
     </RelativeLayout>
