--- a/app/src/main/res/layout/iteam_memo.xml
+++ b/app/src/main/res/layout/iteam_memo.xml
@@ -68,7 +68,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 tools:listitem="@layout/iteam_image"/>
 
         </LinearLayout>
@@ -136,10 +136,12 @@
                 app:civ_border_color="@color/test2"
                 app:civ_border_width="2dp" />
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/comment_input"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                android:minHeight="40dp"
                 android:layout_weight="4"
+                android:inputType="textMultiLine"
                 android:background="@drawable/comment_background"
                 android:layout_marginStart="5dp"
                 android:textSize="20dp"
